<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <item
      android:id="@+id/action_matches"
      android:enabled="true"
      android:icon="@drawable/ic_gradient_blue_500_24dp"
      android:title="Matches"
      app:showAsAction="ifRoom" />
  <item
      android:id="@+id/action_teams"
      android:enabled="true"
      android:icon="@drawable/ic_today_blue_500_24dp"
      android:title="Teams"
      app:showAsAction="ifRoom" />

  <item
      android:id="@+id/action_favorite"
      android:enabled="true"
      android:icon="@drawable/ic_stars_blue_500_24dp"
      android:title="Favorites"
      app:showAsAction="ifRoom" />

</menu>